chore: update payload struct name
