# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/api/auth/exchange": {
+        "/api/auth/access": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -15,7 +15,7 @@
                 "tags": [
                     "auth"
                 ],
-                "summary": "Exchange refresh token for access token",
+                "summary": "Get refresh token by API key and secret",
                 "parameters": [
                     {
                         "description": "request body",
@@ -44,7 +44,7 @@
                 }
             }
         },
-        "/api/auth/refresh": {
+        "/api/auth/exchange": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -55,7 +55,7 @@
                 "tags": [
                     "auth"
                 ],
-                "summary": "Get refresh token",
+                "summary": "Exchange refresh token for access token",
                 "parameters": [
                     {
                         "description": "request body",
@@ -63,7 +63,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.RefreshTokenRequest"
+                            "$ref": "#/definitions/handler.ExchangeTokenRequest"
                         }
                     }
                 ],
@@ -100,18 +100,18 @@
         "handler.AccessTokenRequest": {
             "type": "object",
             "properties": {
-                "refresh_token": {
-                    "type": "string"
-                }
-            }
-        },
-        "handler.RefreshTokenRequest": {
-            "type": "object",
-            "properties": {
                 "api_key": {
                     "type": "string"
                 },
                 "api_secret": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.ExchangeTokenRequest": {
+            "type": "object",
+            "properties": {
+                "refresh_token": {
                     "type": "string"
                 }
             }
